// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuestionCard > Snapshot Tests > should match snapshot for essay question 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-file-text h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span
            class="truncate"
          >
            Explain the concept of closure in JavaScript and provide a practical use case.
          </span>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2"
        >
          Essay
        </p>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-red-500/10 text-red-500 border-red-500/20"
        >
          hard
        </div>
        <div
          class="rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground flex items-center gap-1"
        >
          <svg
            class="lucide lucide-hash h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="4"
              x2="20"
              y1="9"
              y2="9"
            />
            <line
              x1="4"
              x2="20"
              y1="15"
              y2="15"
            />
            <line
              x1="10"
              x2="8"
              y1="3"
              y2="21"
            />
            <line
              x1="16"
              x2="14"
              y1="3"
              y2="21"
            />
          </svg>
          5
           pts
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="space-y-4"
    >
      <div
        class="flex items-center gap-2 flex-wrap"
      >
        <svg
          class="lucide lucide-tag h-3 w-3 text-muted-foreground flex-shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
          />
          <circle
            cx="7.5"
            cy="7.5"
            fill="currentColor"
            r=".5"
          />
        </svg>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          javascript
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          closures
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          advanced
        </div>
      </div>
      <div
        class="text-xs text-muted-foreground italic border-l-2 border-muted pl-3"
      >
        Closures are fundamental to JavaScript and enable powerful patterns like module patterns and callbac...
      </div>
      <div
        class="flex items-center gap-4 text-xs text-muted-foreground pt-2 border-t"
      >
        <div
          class="flex items-center gap-1"
        >
          <svg
            class="lucide lucide-calendar h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          Created 
          12/15/2025
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionCard > Snapshot Tests > should match snapshot for multiple choice question 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-list h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="8"
              x2="21"
              y1="6"
              y2="6"
            />
            <line
              x1="8"
              x2="21"
              y1="12"
              y2="12"
            />
            <line
              x1="8"
              x2="21"
              y1="18"
              y2="18"
            />
            <line
              x1="3"
              x2="3.01"
              y1="6"
              y2="6"
            />
            <line
              x1="3"
              x2="3.01"
              y1="12"
              y2="12"
            />
            <line
              x1="3"
              x2="3.01"
              y1="18"
              y2="18"
            />
          </svg>
          <span
            class="truncate"
          >
            What is JavaScript?
          </span>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2"
        >
          Multiple Choice
        </p>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500 border-green-500/20"
        >
          easy
        </div>
        <div
          class="rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground flex items-center gap-1"
        >
          <svg
            class="lucide lucide-hash h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="4"
              x2="20"
              y1="9"
              y2="9"
            />
            <line
              x1="4"
              x2="20"
              y1="15"
              y2="15"
            />
            <line
              x1="10"
              x2="8"
              y1="3"
              y2="21"
            />
            <line
              x1="16"
              x2="14"
              y1="3"
              y2="21"
            />
          </svg>
          2
           pts
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="space-y-4"
    >
      <div
        class="space-y-2"
      >
        <div
          class="text-xs font-medium text-muted-foreground"
        >
          Options:
        </div>
        <div
          class="grid gap-1"
        >
          <div
            class="flex items-center gap-2 text-sm p-2 rounded-md bg-muted/50"
          >
            <svg
              class="lucide lucide-circle h-3 w-3 text-muted-foreground flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <span
              class="truncate"
            >
              JavaScript is a compiled language
            </span>
          </div>
          <div
            class="flex items-center gap-2 text-sm p-2 rounded-md bg-muted/50"
          >
            <svg
              class="lucide lucide-circle-check h-3 w-3 text-green-500 flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m9 12 2 2 4-4"
              />
            </svg>
            <span
              class="truncate"
            >
              JavaScript is an interpreted language
            </span>
          </div>
          <div
            class="flex items-center gap-2 text-sm p-2 rounded-md bg-muted/50"
          >
            <svg
              class="lucide lucide-circle h-3 w-3 text-muted-foreground flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <span
              class="truncate"
            >
              JavaScript is a machine code language
            </span>
          </div>
          <div
            class="flex items-center gap-2 text-sm p-2 rounded-md bg-muted/50"
          >
            <svg
              class="lucide lucide-circle h-3 w-3 text-muted-foreground flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <span
              class="truncate"
            >
              JavaScript is an assembly language
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-2 flex-wrap"
      >
        <svg
          class="lucide lucide-tag h-3 w-3 text-muted-foreground flex-shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
          />
          <circle
            cx="7.5"
            cy="7.5"
            fill="currentColor"
            r=".5"
          />
        </svg>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          javascript
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          basics
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          programming
        </div>
      </div>
      <div
        class="text-xs text-muted-foreground italic border-l-2 border-muted pl-3"
      >
        JavaScript is an interpreted language that runs in browsers and Node.js environments.
      </div>
      <div
        class="flex items-center gap-4 text-xs text-muted-foreground pt-2 border-t"
      >
        <div
          class="flex items-center gap-1"
        >
          <svg
            class="lucide lucide-calendar h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          Created 
          12/1/2025
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionCard > Snapshot Tests > should match snapshot for true/false question 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-circle-check h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
          <span
            class="truncate"
          >
            Is TypeScript a superset of JavaScript?
          </span>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2"
        >
          True/False
        </p>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500 border-green-500/20"
        >
          easy
        </div>
        <div
          class="rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground flex items-center gap-1"
        >
          <svg
            class="lucide lucide-hash h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="4"
              x2="20"
              y1="9"
              y2="9"
            />
            <line
              x1="4"
              x2="20"
              y1="15"
              y2="15"
            />
            <line
              x1="10"
              x2="8"
              y1="3"
              y2="21"
            />
            <line
              x1="16"
              x2="14"
              y1="3"
              y2="21"
            />
          </svg>
          1
           pts
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="space-y-4"
    >
      <div
        class="space-y-2"
      >
        <div
          class="text-xs font-medium text-muted-foreground"
        >
          Options:
        </div>
        <div
          class="grid gap-1"
        >
          <div
            class="flex items-center gap-2 text-sm p-2 rounded-md bg-muted/50"
          >
            <svg
              class="lucide lucide-circle-check h-3 w-3 text-green-500 flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m9 12 2 2 4-4"
              />
            </svg>
            <span
              class="truncate"
            >
              True
            </span>
          </div>
          <div
            class="flex items-center gap-2 text-sm p-2 rounded-md bg-muted/50"
          >
            <svg
              class="lucide lucide-circle h-3 w-3 text-muted-foreground flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <span
              class="truncate"
            >
              False
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-2 flex-wrap"
      >
        <svg
          class="lucide lucide-tag h-3 w-3 text-muted-foreground flex-shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
          />
          <circle
            cx="7.5"
            cy="7.5"
            fill="currentColor"
            r=".5"
          />
        </svg>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          typescript
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          javascript
        </div>
      </div>
      <div
        class="text-xs text-muted-foreground italic border-l-2 border-muted pl-3"
      >
        TypeScript adds static typing and other features on top of JavaScript.
      </div>
      <div
        class="flex items-center gap-4 text-xs text-muted-foreground pt-2 border-t"
      >
        <div
          class="flex items-center gap-1"
        >
          <svg
            class="lucide lucide-calendar h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          Created 
          12/5/2025
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionCard > Snapshot Tests > should match snapshot with usage statistics 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-list h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="8"
              x2="21"
              y1="6"
              y2="6"
            />
            <line
              x1="8"
              x2="21"
              y1="12"
              y2="12"
            />
            <line
              x1="8"
              x2="21"
              y1="18"
              y2="18"
            />
            <line
              x1="3"
              x2="3.01"
              y1="6"
              y2="6"
            />
            <line
              x1="3"
              x2="3.01"
              y1="12"
              y2="12"
            />
            <line
              x1="3"
              x2="3.01"
              y1="18"
              y2="18"
            />
          </svg>
          <span
            class="truncate"
          >
            What is JavaScript?
          </span>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2"
        >
          Multiple Choice
        </p>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500 border-green-500/20"
        >
          easy
        </div>
        <div
          class="rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground flex items-center gap-1"
        >
          <svg
            class="lucide lucide-hash h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="4"
              x2="20"
              y1="9"
              y2="9"
            />
            <line
              x1="4"
              x2="20"
              y1="15"
              y2="15"
            />
            <line
              x1="10"
              x2="8"
              y1="3"
              y2="21"
            />
            <line
              x1="16"
              x2="14"
              y1="3"
              y2="21"
            />
          </svg>
          2
           pts
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="space-y-4"
    >
      <div
        class="space-y-2"
      >
        <div
          class="text-xs font-medium text-muted-foreground"
        >
          Options:
        </div>
        <div
          class="grid gap-1"
        >
          <div
            class="flex items-center gap-2 text-sm p-2 rounded-md bg-muted/50"
          >
            <svg
              class="lucide lucide-circle h-3 w-3 text-muted-foreground flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <span
              class="truncate"
            >
              JavaScript is a compiled language
            </span>
          </div>
          <div
            class="flex items-center gap-2 text-sm p-2 rounded-md bg-muted/50"
          >
            <svg
              class="lucide lucide-circle-check h-3 w-3 text-green-500 flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m9 12 2 2 4-4"
              />
            </svg>
            <span
              class="truncate"
            >
              JavaScript is an interpreted language
            </span>
          </div>
          <div
            class="flex items-center gap-2 text-sm p-2 rounded-md bg-muted/50"
          >
            <svg
              class="lucide lucide-circle h-3 w-3 text-muted-foreground flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <span
              class="truncate"
            >
              JavaScript is a machine code language
            </span>
          </div>
          <div
            class="flex items-center gap-2 text-sm p-2 rounded-md bg-muted/50"
          >
            <svg
              class="lucide lucide-circle h-3 w-3 text-muted-foreground flex-shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <span
              class="truncate"
            >
              JavaScript is an assembly language
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-2 flex-wrap"
      >
        <svg
          class="lucide lucide-tag h-3 w-3 text-muted-foreground flex-shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
          />
          <circle
            cx="7.5"
            cy="7.5"
            fill="currentColor"
            r=".5"
          />
        </svg>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          javascript
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          basics
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 text-xs"
        >
          programming
        </div>
      </div>
      <div
        class="flex items-center gap-4 text-sm pt-2 border-t"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-trending-up h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="22 7 13.5 15.5 8.5 10.5 2 17"
            />
            <polyline
              points="16 7 22 7 22 13"
            />
          </svg>
          <div>
            <div
              class="font-medium"
            >
              5
            </div>
            <div
              class="text-xs text-muted-foreground"
            >
              Uses
            </div>
          </div>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-calendar h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          <div>
            <div
              class="text-xs text-muted-foreground"
            >
              Last used: 
              1/5/2026
            </div>
          </div>
        </div>
      </div>
      <div
        class="text-xs text-muted-foreground italic border-l-2 border-muted pl-3"
      >
        JavaScript is an interpreted language that runs in browsers and Node.js environments.
      </div>
      <div
        class="flex items-center gap-4 text-xs text-muted-foreground pt-2 border-t"
      >
        <div
          class="flex items-center gap-1"
        >
          <svg
            class="lucide lucide-calendar h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          Created 
          12/1/2025
        </div>
      </div>
    </div>
  </div>
</div>
`;
